Closed
Bug 473899
Opened 17 years ago
Closed 17 years ago
"ASSERTION: must have binding parent when in native anonymous subtree"
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: jruderman, Assigned: smaug)
Details
(Keywords: assertion, testcase)
Attachments
(2 files)
|
462 bytes,
text/html
|
Details | |
|
1.46 KB,
patch
|
sicking
:
review+
sicking
:
superreview+
|
Details | Diff | Splinter Review |
About 30% of the time, this testcase triggers:
###!!! ASSERTION: must have binding parent when in native anonymous subtree: '!IsInNativeAnonymousSubtree() || GetBindingParent()', file nsIContent.h, line 216
This assertion also appears in bug 467869, but the testcase there is totally different.
| Assignee | ||
Updated•17 years ago
|
Component: Layout → DOM
QA Contact: layout → general
| Assignee | ||
Comment 1•17 years ago
|
||
Assignee: nobody → Olli.Pettay
Status: NEW → ASSIGNED
Attachment #357582 -
Flags: superreview?(jonas)
Attachment #357582 -
Flags: review?(jonas)
Attachment #357582 -
Flags: superreview?(jonas)
Attachment #357582 -
Flags: superreview+
Attachment #357582 -
Flags: review?(jonas)
Attachment #357582 -
Flags: review+
| Assignee | ||
Comment 2•17 years ago
|
||
| Assignee | ||
Updated•17 years ago
|
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Updated•7 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•