Bug 473899, ASSERTION: must have binding parent when in native anonymous subtree, r+sr=sicking